--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -115,7 +115,7 @@ Edit your profile
 <div class="row">
 <div class="col-sm-12 center">
 <button type="submit" class="btn btn-light btn-lg btn-form">Save <i class="fas fa-cloud-upload-alt"></i></button>
-<button type="submit" class="btn btn-light btn-lg btn-form" href="{{ url_for('profile', username=session['user']) }}">Cancel <i class="fas fa-trash-alt"></i></button>
+<button type="submit" class="btn btn-light btn-lg btn-form" href="{{ url_for('profile', username=session['user']) }}">Cancel <i class="fas fa-backspace"></i></button>
 </div>
 </div>
   </form>
