--- a/templates/profile.html
+++ b/templates/profile.html
@@ -64,6 +64,7 @@
 	<div class="row">
     <div class="col-sm-12 center">
        <a href="{{ url_for('edit_profile', username=session['user']) }}" type="submit" class="btn btn-light btn-lg btn-form">Edit <i class="fas fa-pen-fancy"></i></a>
+       <a href="{{ url_for('confirm_delete', username=session['user']) }}" type="submit" class="btn btn-light btn-lg btn-form">Delete <i class="fas fa-trash-alt"></i></a>
     </div>
     </div>
  
