--- a/templates/artists.html
+++ b/templates/artists.html
@@ -7,128 +7,145 @@ Artists
 {% block content %}
 
 <div class="welcome center">
-<div class="welcome-image">
-<img src="{{ url_for('static', filename='images/tattoo-making.jpg') }}" alt="">
+    <div class="welcome-image">
+        <img src="{{ url_for('static', filename='images/tattoo-making.jpg') }}" alt="">
 
-<div class="overlay-text">
-<h2 class="welcome-title">Welcome to Get My Tattoo!</h2>
-<p class="welcome-text">Finding the right tattoo artist is not always easy. That's why Get My Tattoo is here for you!<br>
-The only database that helps you in your research.<br>
-You can easily search our database by location, tattoo style, tattoo artist, and also by the language the tattoo artist speaks!
-</p>
-</div>
-</div>
+        <div class="overlay-text">
+            <h2 class="welcome-title">Welcome to Get My Tattoo!</h2>
+            <p class="welcome-text">Finding the right tattoo artist is not always easy. That's why Get My Tattoo is here
+                for you!<br>
+                The only database that helps you in your research.<br>
+                You can easily search our database by location, tattoo style, tattoo artist, and also by the language
+                the tattoo artist speaks!
+            </p>
+        </div>
+    </div>
 </div>
 
 
 
 <div class="row">
-	<div class="col-sm-12">
-		<h3 class="subtitle center">Need some ideas? Explore some different styles!</h3>
-	</div>
+    <div class="col-sm-12">
+        <h3 class="subtitle center">Need some ideas? Explore some different styles!</h3>
+    </div>
 </div>
 
 <div class="card-deck ideas">
-  <div class="card">
-    <img src="{{ url_for('static', filename='images/manga.jpg') }}" class="card-img-top" alt="Manga style tattoo">
-    <div class="card-body">
-      <h5 class="card-title">Manga/Anime</h5>
-      <a href="{{ url_for('show_manga') }}" class="btn btn-dark btn-form">See All</a>
+    <div class="card">
+        <img src="{{ url_for('static', filename='images/manga.jpg') }}" class="card-img-top" alt="Manga style tattoo">
+        <div class="card-body">
+            <h5 class="card-title">Manga/Anime</h5>
+            <a href="{{ url_for('show_manga') }}" class="btn btn-dark btn-form">See All</a>
+        </div>
     </div>
-  </div>
-  <div class="card">
-    <img src="{{ url_for('static', filename='images/nordic.jpg') }}" class="card-img-top" alt="Nordic style tattoo">
-    <div class="card-body">
-      <h5 class="card-title">Nordic Style</h5>
-      <a href="{{ url_for('show_nordic') }}" class="btn btn-dark btn-form">See All</a>
+    <div class="card">
+        <img src="{{ url_for('static', filename='images/nordic.jpg') }}" class="card-img-top" alt="Nordic style tattoo">
+        <div class="card-body">
+            <h5 class="card-title">Nordic Style</h5>
+            <a href="{{ url_for('show_nordic') }}" class="btn btn-dark btn-form">See All</a>
+        </div>
     </div>
-  </div>
-  <div class="card">
-    <img src="{{ url_for('static', filename='images/japanese.jpg') }}" class="card-img-top" alt="Japanese style tattoo">
-    <div class="card-body">
-      <h5 class="card-title">Japanese</h5>
-      <a href="{{ url_for('show_japanese') }}" class="btn btn-dark btn-form">See All</a>
+    <div class="card">
+        <img src="{{ url_for('static', filename='images/japanese.jpg') }}" class="card-img-top"
+            alt="Japanese style tattoo">
+        <div class="card-body">
+            <h5 class="card-title">Japanese</h5>
+            <a href="{{ url_for('show_japanese') }}" class="btn btn-dark btn-form">See All</a>
+        </div>
     </div>
-  </div>
-  <div class="card">
-    <img src="{{ url_for('static', filename='images/realism.jpg') }}" class="card-img-top" alt="Realistic style tattoo">
-    <div class="card-body">
-      <h5 class="card-title">Realism</h5>
-      <a href="{{ url_for('show_realism') }}" class="btn btn-dark btn-form">See All</a>
+    <div class="card">
+        <img src="{{ url_for('static', filename='images/realism.jpg') }}" class="card-img-top"
+            alt="Realistic style tattoo">
+        <div class="card-body">
+            <h5 class="card-title">Realism</h5>
+            <a href="{{ url_for('show_realism') }}" class="btn btn-dark btn-form">See All</a>
+        </div>
     </div>
-  </div>
 </div>
 
 
 
 <div class="row">
-	<div class="col-sm-12">
-		<h3 class="subtitle center">Or simply search our database</h3>
-	</div>
+    <div class="col-sm-12">
+        <h3 class="subtitle center">Or simply search our database</h3>
+    </div>
 </div>
 
 
 
 
 <div class="row">
-	<div class="col-sm-12">
-		<h3 class="subtitle center">Last added</h3>
-	</div>
+    <div class="col-sm-12">
+        <h3 class="subtitle center">Last added</h3>
+    </div>
 </div>
 
 
 <!--Card with Artist Profile-->
 {% for artist in artists %}
 <div class="row card-artist">
-	<div class="col-sm-12">
-		<div class="row">
-			<div class="col col-sm-12 col-lg-8">
-				<div class="row panel">
-					<div class="col col-sm-12 col-md-6">
-						<div class="card" style="width: 100%;">
-							<img class="card-img-top img-panel" src="{{ artist.profile_url }}" alt="Profile picture for {{ artist.artist_name }}">
+    <div class="col-sm-12">
+        <div class="row">
+            <div class="col col-sm-12 col-lg-8">
+                <div class="row panel">
+                    <div class="col-sm-12 col-md-6">
+                        <div class="card" style="width: 100%;">
+                            <img class="card-img-top img-panel" src="{{ artist.profile_url }}"
+                                alt="Profile picture for {{ artist.artist_name }}">
+                        </div>
+                    </div>
+                    <div class="d-none d-md-block col-md-6">
+                        <h5 class="card-title">{{ artist.artist_name }}</h5>
+                        <p class="card-text">{{ artist.bio }}</p>
+                        <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to
+                            {{ artist.artist_name }}'s page</a>
+                    </div>
                 </div>
-						</div>
-						<div class="col col-sm-12 col-md-6">
-							<h5 class="card-title">{{ artist.artist_name }}</h5>
-							<p class="card-text">{{ artist.bio }}</p>
-							<a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to {{ artist.artist_name }}'s page</a>
-						</div>
-					</div>
-				</div>
-				<div class="col col-lg-4 d-none d-lg-block">
-					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-						<div class="carousel-inner">
-							<div class="carousel-item active">
-								<img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="...">
-    </div>
-								<div class="carousel-item">
-									<img src="{{ artist.photo_2 }}" class="d-block w-100 img-panel" alt="...">
-    </div>
-									<div class="carousel-item">
-										<img src="{{ artist.photo_3 }}" class="d-block w-100 img-panel" alt="...">
-    </div>
-									</div>
-									<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
-										data-slide="prev">
-										<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-										<span class="sr-only">Previous</span>
-									</a>
-									<a class="carousel-control-next" href="#carouselExampleControls" role="button"
-										data-slide="next">
-										<span class="carousel-control-next-icon" aria-hidden="true"></span>
-										<span class="sr-only">Next</span>
-									</a>
-								</div>
-							</div>
-						</div>
-						<hr>
-						<hr>
-                        <hr>
-					
+                <div class="row d-sm-block d-md-none">
+                    <div class="col-sm-12 d-sm-block d-md-none">
+                        <h5 class="card-title">{{ artist.artist_name }}</h5>
+                        <p class="card-text">{{ artist.bio }}</p>
+                        <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to
+                            {{ artist.artist_name }}'s page</a>
+                    </div>
+                </div>
+            </div>
+
+<div class="col col-lg-4 d-none d-lg-block">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{ artist.photo_2 }}" class="d-block w-100 img-panel" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{ artist.photo_3 }}" class="d-block w-100 img-panel" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
 
 
-					</div>
-				</div>
-                {% endfor %}
-				{% endblock %}
+        </div>
+        
+    </div>
+
+
+
+
+</div>
+    <hr>
+    <hr>
+    <hr>
+{% endfor %}
+{% endblock %}
