--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,6 +80,12 @@ i{
 
 input.form-control{
     font-size: 1.5rem;
+    font-family: "Montserrat", sans-serif;
+}
+
+input.form-control.form-input{
+    font-size: 1.5rem;
+    font-family: "Montserrat", sans-serif;
 }
 
 button.btn.btn-outline-light{
@@ -237,6 +243,18 @@ button.navbar-toggler:hover{
     box-shadow: 0 0 20px #e1e1e1;
     text-shadow: 0 0 15px #e1e1e1;
     border: 2px solid #e6e6e6;
+}
+
+/* Search Box */
+.search-box{
+    width: 40rem;
+    font-size: 1.5rem;
+    border-radius: 2rem;
+}
+
+.search-form{
+    display: inline-block;
+    margin-bottom: 3rem;
 }
 
 
