--- a/templates/artists.html
+++ b/templates/artists.html
@@ -66,8 +66,12 @@ Artists
 
 
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-12 center">
         <h3 class="subtitle center">Or simply search our database</h3>
+        <form class="form-inline search-form" action="{{ url_for('search') }}" method="POST">
+            <input class="search-box" type="search" placeholder=" Search" name="query" id="query" required>
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search  <i class="fas fa-search"></i></button>
+        </form>
     </div>
 </div>
 
