--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,8 @@ html, body {
   width: 96vw;
 }
 
+
+
 /* Colours */
 body{
     background-color: black;
@@ -35,6 +37,8 @@ a.navbar-brand.logo, a.nav-link {
 .valid-feedback{
     color: #006644;
 }
+
+
 
 /* Typography */
 .logo, h2{
@@ -96,7 +100,6 @@ label{
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
 }
-
 
 input.form-control{
     font-size: 1.5rem;
@@ -163,6 +166,8 @@ h4.flash{
     margin-top: 3rem;
 }
 
+
+
 /* Placing */
 
 .center{
@@ -174,51 +179,6 @@ h4.flash{
     margin-bottom: 6rem;
 }
 
-/* Welcome section */
-
-.welcome{
-    margin: 3rem 3rem 6rem 3rem;
-    position: relative;
-}
-
-.welcome-image img {
-    width: 100%;
-    max-height: 50rem;
-    object-fit: cover;
-}
-
-.overlay-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-/* Ideas Cards */
-
-.ideas{
-    margin-bottom: 6rem;
-}
-
-.card-img-top{
-    height: 28rem;
-    object-fit: cover;
-}
-
-.card-body{
-    background-color: #858282;
-}
-
-/* Search Bar */
-.search-bar{
-    width: 40rem;
-    height: 3rem;
-    margin: auto;
-    
-}
 
 
 /* Navbar */
@@ -265,6 +225,59 @@ button.navbar-toggler:hover{
     border: 2px solid #e6e6e6;
 }
 
+
+
+/* Search Bar inside Nav */
+.search-bar{
+    width: 40rem;
+    height: 3rem;
+    margin: auto;
+}
+
+
+
+/* Welcome section -hero with overlay- */
+
+.welcome{
+    margin: 3rem 3rem 6rem 3rem;
+    position: relative;
+}
+
+.welcome-image img {
+    width: 100%;
+    max-height: 50rem;
+    object-fit: cover;
+}
+
+.overlay-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+
+/* Styles Ideas Cards */
+
+.ideas{
+    margin-bottom: 6rem;
+}
+
+.card-img-top{
+    height: 28rem;
+    object-fit: cover;
+}
+
+.card-body{
+    background-color: #858282;
+}
+
+
+
 /* Search Box */
 .search-box{
     width: 40rem;
@@ -276,6 +289,7 @@ button.navbar-toggler:hover{
     display: inline-block;
     margin-bottom: 3rem;
 }
+
 
 
 /* Show artists */
@@ -302,7 +316,9 @@ height: 40rem;
 object-fit: cover;
 }
 
-/* Form panel and background */
+
+
+/* Form, panel and background - Register and Login, Add and Edit */
 .background-image{
   background-image: url("/static/images/background.jpg");
   background-repeat: no-repeat;
@@ -357,7 +373,6 @@ span.input-group-text{
     font-size: 3rem;
 }
 
-
 /* Code adapted from https://www.w3schools.com/howto/howto_css_placeholder.asp */
 .form-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: black;
@@ -399,6 +414,8 @@ p.link-form a{
 p.link-form a:hover{
     font-weight: bold;
 }
+
+
 
 /* Profile */
 .image-profile{
@@ -476,6 +493,8 @@ form.add-profile input:hover, form.add-profile textarea:hover{
     text-shadow: 0 0 15px #e1e1e1;
     border: 2px solid #e6e6e6;
 }
+
+
 
 /* Add Profile */
 .add-profile{
