--- a/templates/add-profile.html
+++ b/templates/add-profile.html
@@ -8,7 +8,9 @@ Add {{ username }}'s profile
 <div class="container">
     <h4 class="flash">
         Make sure to add nice pictures to make your profile stand out!<br>
-        This is your business card, so show your best!
+        This is your business card, so show your best! <br>
+        <br>
+        Fields with * are required, don't forget to fill them!
     </h4>
     <div class="container profile-container">
 
@@ -16,7 +18,7 @@ Add {{ username }}'s profile
         <form class="add-profile needs-validation" action="{{ url_for('add_profile', username=session['user']) }}"
             method="POST" novalidate>
             <div class="form-group scroll">
-                <label for="artist_name"><i class="fa fa-user form-icon-profile"></i> Your Name</label>
+                <label for="artist_name"><i class="fa fa-user form-icon-profile"></i> Your Name *</label>
                 <input type="text" class="form-control" id="artist_name" name="artist_name" minlength="3" maxlength="30"
                     pattern="^[a-zA-Z ]{3,30}$" required>
                 <div class="valid-feedback feedback">
@@ -28,7 +30,7 @@ Add {{ username }}'s profile
             </div>
 
             <div class="form-group scroll">
-                <label for="address"><i class="fas fa-map-marked-alt"></i> Address</label>
+                <label for="address"><i class="fas fa-map-marked-alt"></i> Address *</label>
                 <input type="text" class="form-control" id="address" name="address" required>
                 <div class="valid-feedback feedback">
                     Great!
@@ -41,8 +43,8 @@ Add {{ username }}'s profile
             <div class="form-row">
 
                 <div class="form-group col-md-6 scroll">
-                    <label for="city"><i class="fas fa-city"></i> City</label>
-                    <input type="text" class="form-control" id="city" name="city">
+                    <label for="city"><i class="fas fa-city"></i> City *</label>
+                    <input type="text" class="form-control" id="city" name="city" required>
                     <div class="valid-feedback feedback">
                         Great!
                     </div>
@@ -52,8 +54,8 @@ Add {{ username }}'s profile
                 </div>
 
                 <div class="form-group col-md-6 scroll">
-                    <label for="country"><i class="fas fa-globe"></i> Country/State</label>
-                    <input type="text" class="form-control" id="country" name="country">
+                    <label for="country"><i class="fas fa-globe"></i> Country/State *</label>
+                    <input type="text" class="form-control" id="country" name="country" required>
                     <div class="valid-feedback feedback">
                         Great!
                     </div>
@@ -66,7 +68,7 @@ Add {{ username }}'s profile
             <div class="form-row">
 
                 <div class="form-group col-md-6 scroll">
-                    <label for="phone"><i class="fas fa-phone"></i> Phone</label>
+                    <label for="phone"><i class="fas fa-phone"></i> Phone *</label>
                     <input type="tel" class="form-control" id="phone" name="phone" required>
                     <div class="valid-feedback feedback">
                         Great!
@@ -77,7 +79,7 @@ Add {{ username }}'s profile
                 </div>
 
                 <div class="form-group col-md-6 scroll">
-                    <label for="email"><i class="fas fa-at"></i> Email</label>
+                    <label for="email"><i class="fas fa-at"></i> Email *</label>
                     <input type="email" class="form-control" id="email" name="email" required>
                     <div class="valid-feedback feedback">
                         Great!
@@ -116,7 +118,7 @@ Add {{ username }}'s profile
             </div>
 
             <div class="form-group scroll">
-                <label for="profile_url"><i class="fas fa-user-circle"></i> Profile picture (url)</label>
+                <label for="profile_url"><i class="fas fa-user-circle"></i> Profile picture (url) *</label>
                 <input type="url" class="form-control" id="profile_url" name="profile_url" placeholder="Add link"
                     required>
                 <div class="valid-feedback feedback">
