--- a/templates/artists.html
+++ b/templates/artists.html
@@ -13,7 +13,7 @@ active
 
 <div class="welcome center">
     <div class="welcome-image">
-        <img src="{{ url_for('static', filename='images/tattoo-making.jpg') }}" alt="">
+        <img src="{{ url_for('static', filename='images/tattoo-making.jpg') }}" alt="Woman lying down while getting a tattoo on her back">
 
         <div class="overlay-text">
             <h2 class="welcome-title">Welcome to Get My Tattoo!</h2>
